--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,41 +7,110 @@
     tools:context=".MainActivity">
 
     <RadioGroup
-        android:id="@+id/radioGrupoMasterSiNo"
+        android:id="@+id/radioOpcionPago"
         android:layout_width="185dp"
-        android:layout_height="76dp"
+        android:layout_height="150dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayoutCamposDinamicos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26">
 
         <RadioButton
-            android:id="@+id/radioSi"
+            android:id="@+id/radioPagoBanco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Si" />
+            android:text="@string/pagoBanco" />
 
         <RadioButton
-            android:id="@+id/radioNo"
+            android:id="@+id/radioMostrarPagoBanco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No" />
+            android:text="@string/mostrarPagosBanco" />
+
+        <RadioButton
+            android:id="@+id/radioPagoPayPal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/PagosPayPal" />
+
+        <RadioButton
+            android:id="@+id/radioMostarPagoPayPal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/mostrarPagosPayPal" />
     </RadioGroup>
 
     <LinearLayout
         android:id="@+id/linearLayoutCamposDinamicos"
         android:layout_width="413dp"
-        android:layout_height="441dp"
+        android:layout_height="350dp"
         android:orientation="vertical"
         android:padding="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <EditText
+            android:id="@+id/cuentaPayPal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:ems="10"
+            android:hint="@string/correoPayPal"
+            android:inputType="textPersonName"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/noCuentaBanco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:ems="10"
+            android:hint="@string/noDeCuenta"
+            android:inputType="number"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/nombreCompleto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:ems="10"
+            android:hint="@string/nombreCompleto"
+            android:inputType="textPersonName"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/montoAPagar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:ems="10"
+            android:hint="@string/montoAPagar"
+            android:inputType="number"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/buttonDepositar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/depositar"
+            android:visibility="gone" />
+
+        <ListView
+            android:id="@+id/listaPagos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
